tests/cases/semantic/invalid/undefined_variable/main.nm
@entry
fn main() {
    missing = 1
}
